@@ -28,7 +28,6 @@ buildscript {
     }
 }
 
-
 plugins {
     id 'application'
     id 'checkstyle'
@@ -38,9 +37,9 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'signing'
-    id 'com.github.spotbugs' version '4.5.1'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
+    id 'com.github.spotbugs'
+    id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.kotlin.plugin.spring'
 }
 
 description = "Indexing Server"
@@ -61,7 +60,7 @@ apply plugin: 'license-report'
 
 def INDEXER_XMS = "$System.env.INDEXER_XMS"
 def INDEXER_XMX = "$System.env.INDEXER_XMX"
-def INDEXER_ARGS = "$System.env.CONDUCTOR_ARGS"
+def INDEXER_ARGS = "$System.env.INDEXER_ARGS"
 def PARALLEL = "$System.env.PARALLELISM"
 def GC = "$System.env.GC"
 
@@ -87,6 +86,7 @@ if (GC == 'null' || GC == null || GC == "") {
 
 mainClassName = "com.openlattice.indexing.Indexer"
 applicationDefaultJvmArgs = [INDEXER_XMS, INDEXER_XMX, "-server", GC, PARALLEL]
+
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
@@ -104,7 +104,8 @@ println "Enabled profiles: " + Arrays.toString(run.args)
 
 checkstyle {
   toolVersion = "${checkstyle_version}"
-  config project.resources.text.fromUri('https://raw.githubusercontent.com/openlattice/gradles/master/checkstyle.xml')
+  showViolations = false
+    config project.resources.text.fromUri(rootProject.file('gradles/checkstyle.xml').toURI())
 }
 tasks.withType(Checkstyle) {
     reports {
@@ -144,6 +145,10 @@ sourceSets {
     test.runtimeClasspath += configurations.provided
 }
 
+test {
+  ignoreFailures = true
+}
+
 dependencies {
     spotbugsPlugins "com.h3xstream.findsecbugs:findsecbugs-plugin:${findsecbugs_version}"
     compileOnly "net.jcip:jcip-annotations:${jcip_version}"
@@ -151,28 +156,24 @@ dependencies {
     testCompileOnly "net.jcip:jcip-annotations:${jcip_version}"
     testCompileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs_annotations_version}"
 
-    compile "org.ow2.asm:asm:${asm_version}"
+    implementation "org.ow2.asm:asm:${asm_version}"
 
-    if (project.hasProperty('developmentMode') && project.developmentMode) {
-        logger.quiet(project.name + " using project dependencies.")
-        compile project(":conductor-client")
-        compile project(":scrunchie")
-        compile project(":courier")
+    implementation "com.openlattice:conductor-client:${conductor_client_version}"
+    implementation "com.openlattice:courier:${courier_version}"
+    implementation "com.openlattice:rhizome:${rhizome_version}"
+
+    if( project.hasProperty('developmentMode') && project.developmentMode ) {
+        testImplementation(project(path: ":rhizome-client", configuration: "tests"))
     } else {
-        logger.quiet(project.name + " using jar dependencies.")
-        compile "com.openlattice:conductor-client:${conductor_client_version}"
-        compile "com.openlattice:scrunchie:${scrunchie_version}"
-        compile "com.openlattice:courier:${courier_version}"
+        testImplementation "com.openlattice:rhizome-client:${rhizome_client_version}:tests"
     }
-    compile "com.openlattice:rhizome:${rhizome_version}"
-    testCompile "com.openlattice:rhizome-client:${rhizome_client_version}:tests"
 
     /*
      * TESTING
      */
-    testCompile "junit:junit:${junit_version}"
-    testCompile "org.mockito:mockito-all:${mockito_version}"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    testImplementation "junit:junit:${junit_version}"
+    testImplementation "org.mockito:mockito-all:${mockito_version}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 eclipse {
@@ -187,12 +188,7 @@ eclipse.classpath.plusConfigurations += [configurations.provided]
 
 tasks.withType(JavaCompile) {
     options.compilerArgs+= [ "--add-modules", "java.se",
-                             "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED",
-                             "--add-opens","java.base/java.lang=ALL-UNNAMED",
-                             "--add-opens","java.base/java.nio=ALL-UNNAMED",
-                             "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
-                             "--add-opens","java.management/sun.management=ALL-UNNAMED",
-                             "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+                             "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED"]
 }
 
 tasks.withType(Test) {
@@ -216,7 +212,7 @@ jar {
     doFirst {
         manifest {
             attributes (
-                    "Class-Path": configurations.runtime.files.collect { it.getName() }.join(" "),
+                    "Class-Path": configurations.runtimeClasspath.files.collect { it.getName() }.join(" "),
                     "Main-Class": mainClassName
             )
         }
